--- a/index.html
+++ b/index.html
@@ -2,332 +2,15 @@
 <html lang="en">
 
 <head>
+  <link rel="stylesheet" type="text/css" href="./styles.css">
+  <script src="https://d3js.org/d3.v5.min.js"></script>
+  <script src="http://d3js.org/topojson.v1.min.js"></script>
+  <script src="https://d3js.org/d3-axis.v1.min.js"></script>
+  <script src="./script.js"></script>
   <meta charset="utf-8">
-
-  <style>
-    .slider-container {
-      position: absolute;
-      margin-left: 5%;
-      width: 55%;
-      bottom: 2%;
-    }
-
-    .slider {
-      width: 100%;
-    }
-
-    .slider-labels {
-      display: flex;
-      justify-content: space-between;
-      padding: 0;
-      text-align: center;
-      list-style: none;
-      width: 100%;
-      color: white;
-      font-weight: 200;
-    }
-
-    input[type=range] {
-      background: none;
-  height: 27px;
-  -webkit-appearance: none;
-  margin: 10px 0;
-  width: 100%;
-}
-input[type=range]:focus {
-  outline: none;
-}
-input[type=range]::-webkit-slider-runnable-track {
-  width: 100%;
-  height: 14px;
-  cursor: pointer;
-  animate: 0.2s;
-  box-shadow: 1px 1px 1px #50555C;
-  background: #50555C;
-  border-radius: 14px;
-  border: 0px solid #000000;
-}
-input[type=range]::-webkit-slider-thumb {
-  box-shadow: 0px 0px 0px #000000;
-  border: 0px solid #000000;
-  height: 21px;
-  width: 40px;
-  border-radius: 13px;
-  background: #529DE1;
-  cursor: pointer;
-  -webkit-appearance: none;
-  margin-top: -3.5px;
-}
-input[type=range]:focus::-webkit-slider-runnable-track {
-  background: #50555C;
-}
-input[type=range]::-moz-range-track {
-  width: 100%;
-  height: 14px;
-  cursor: pointer;
-  animate: 0.2s;
-  box-shadow: 1px 1px 1px #50555C;
-  background: #50555C;
-  border-radius: 14px;
-  border: 0px solid #000000;
-}
-input[type=range]::-moz-range-thumb {
-  box-shadow: 0px 0px 0px #000000;
-  border: 0px solid #000000;
-  height: 21px;
-  width: 40px;
-  border-radius: 13px;
-  background: #529DE1;
-  cursor: pointer;
-}
-input[type=range]::-ms-track {
-  width: 100%;
-  height: 14px;
-  cursor: pointer;
-  animate: 0.2s;
-  background: transparent;
-  border-color: transparent;
-  color: transparent;
-}
-input[type=range]::-ms-fill-lower {
-  background: #50555C;
-  border: 0px solid #000000;
-  border-radius: 28px;
-  box-shadow: 1px 1px 1px #50555C;
-}
-input[type=range]::-ms-fill-upper {
-  background: #50555C;
-  border: 0px solid #000000;
-  border-radius: 28px;
-  box-shadow: 1px 1px 1px #50555C;
-}
-input[type=range]::-ms-thumb {
-  margin-top: 1px;
-  box-shadow: 0px 0px 0px #000000;
-  border: 0px solid #000000;
-  height: 21px;
-  width: 40px;
-  border-radius: 13px;
-  background: #529DE1;
-  cursor: pointer;
-}
-input[type=range]:focus::-ms-fill-lower {
-  background: #50555C;
-}
-input[type=range]:focus::-ms-fill-upper {
-  background: #50555C;
-}
-
-    .tooltip {
-      /* position: absolute;
-      display: inline-block; */
-      display:block;
-      position:fixed;
-      overflow:hidden;
-    }
-
-    body {
-      font-family: 'Avenir Next';
-      background-color: white;
-      margin: 0px;
-      padding: 0px;
-    }
-
-    svg {
-      background-color: rgb(255, 255, 255);
-    }
-
-    #Intro {
-      padding: 1%;
-      text-align: center;
-      background-color: rgb(23, 52, 77);
-      color: white;
-      font-family: Avenir, Arial, Helvetica, sans-serif;
-    }
-
-    h1 {
-      font-size: 2em;
-    }
-
-    h2 {
-      font-size: 1.0em;
-    }
-
-    p {
-      font-size: 1.0em;
-      font-size: 18px;
-      text-align: center;
-      padding-bottom: 30px;
-    }
-
-    .date {
-      margin: 0;
-      position: relative;
-      text-align: left;
-      color: white;
-      font-weight: bold;
-      padding: 0;
-      padding-left: 1%;
-      padding-top: 1%;
-    }
-
-    em {
-      font-style: normal;
-      font-weight: bolder;
-      padding-bottom: 50px;
-      margin-bottom: 20px;
-    }
-
-    #mapContainer {
-      position: relative;
-      max-width: 100%;
-      background-color: rgb(23, 52, 77);
-      padding-bottom: 10%;
-      height: 600px;
-    }
-
-    svg.mapSVG {
-      margin-left: 5%;
-      background-color: rgb(23, 52, 77);
-    }
-
-    #map {
-      /* opacity: .8; */
-      max-width: 50%;
-      position: absolute;
-
-    }
-
-    #mapText {
-      position: absolute;
-      text-align: center;
-      float: right;
-      margin-top: 5%;
-      margin-bottom: 5%;
-      margin-left: 70%;
-      margin-right: 10%;
-      padding: 2%;
-      background-color: rgba(255, 255, 255, 0.164);
-      color: white;
-    }
-
-    #legend {
-      position: absolute;
-      text-align: left;
-      float: right;
-      left: 70%;
-      bottom: 5%;
-      padding: 2%;
-      background-color: rgba(255, 255, 255, 0.164);
-      color: white;
-    }
-
-    #legend .title {
-      margin-bottom: 4%;
-    }
-
-
-    .key-dot {
-      display: inline-block;
-      height: 10px;
-      margin-right: .5em;
-      width: 20px;
-    }
-
-    .first { background: #EC6967; align:left;}
-    .second{ background: #F4B1B2;}
-    .third { background: #FFA764;}
-    .forth { background: #FED19B;}
-    .fifth { background: #78BD70;}
-    .sixth { background: #C9E8AC;}
-    .seventh { background: #69A2CB;}
-    .eighth { background: #C0DCE8;}
-    .ninth { background: #987284;}
-    .tenth { background: #D8C8E0;}
-
-    .topSongs {
-      margin: 0;
-      text-align: left;
-      border: 0;
-      padding: 0;
-    }
-
-    .gridlines line {
-      stroke: lightgrey;
-      stroke-opacity: 0.7;
-      stroke-width: 0.7;
-      shape-rendering: crispEdges;
-    }
-
-
-    text {
-      font-family: Avenir, Arial, Helvetica, sans-serif;
-      font-size: 14px;
-      stroke-opacity: 0.9;
-      shape-rendering: crispEdges;
-    }
-
-    .label {
-      font-style: italic;
-      font-size: 16px;
-    }
-
-    .boundary {
-      stroke: rgb(23, 52, 77);
-      stroke-width: .4px;
-    }
-
-    .hidden {
-      display: none;
-    }
-
-    #plotcontainer {
-      display: flex;
-      margin-top: 100px;
-      max-width: 1300;
-    }
-
-    .overrideText {
-      text-align: left;
-      font-size: 1em;
-      padding-left: 40px;
-      padding-bottom: 0px;
-    }
-
-    #titleText {
-      align-content: center;
-      text-align: center;
-      padding-top: 40px;
-    }
-
-    .flex-container {
-      display: flex;
-      max-width: 100%;
-      padding-left: 100px;
-      margin-bottom: 10%;
-    }
-
-
-  div.tooltip {
-    position: absolute;
-    text-align: center;
-    padding: 4px;
-    width: 120px;
-    height: 30px;
-    font: 12px sans-serif;
-    background: #f6fbfc;
-    border: 1px solid grey;
-    border-radius: 3px;
-    pointer-events: none;
-  }
-
-
-  </style>
-
 </head>
 
 <body>
-
   <div id='Intro'>
     <h1>Spotify's Top Songs by Country</h1>
     <h2>January 1, 2017 — December 31, 2017</h2>
@@ -369,245 +52,23 @@ input[type=range]:focus::-ms-fill-upper {
     <div> <p class="topSongs"><span class="key-dot tenth"></span>Me Rehúso</p> </div>
     </div>
     <div class='slider-container'>
-        <input type="range" min="0" max="364" value="0" class="slider" step='1'>
-        <ul class='slider-labels'>
-          <li>JAN</li>
-          <li>FEB</li>
-          <li>MAR</li>
-          <li>APR</li>
-          <li>MAY</li>
-          <li>JUN</li>
-          <li>JUL</li>
-          <li>AUG</li>
-          <li>SEPT</li>
-          <li>OCT</li>
-          <li>NOV</li>
-          <li>DEC</li>
-        </ul>
-      </div>
+      <input type="range" min="0" max="364" value="0" class="slider" step='1'>
+      <ul class='slider-labels'>
+        <li>JAN</li>
+        <li>FEB</li>
+        <li>MAR</li>
+        <li>APR</li>
+        <li>MAY</li>
+        <li>JUN</li>
+        <li>JUL</li>
+        <li>AUG</li>
+        <li>SEPT</li>
+        <li>OCT</li>
+        <li>NOV</li>
+        <li>DEC</li>
+      </ul>
+    </div>
   </div>
-
-
-  <!-- END HTML START JS -->
-
-  <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script src="http://d3js.org/topojson.v1.min.js"></script>
-  <script src="https://d3js.org/d3-axis.v1.min.js"></script>
-  <script>
-    var width = 962,
-      rotated = 90,
-      height = 600;
-
-    var projection = d3.geoMercator()
-      .scale(125)
-      .translate([width / 2.5, height / 1.4]);
-
-
-    var svg = d3.select("#map").append("svg")
-      .attr("width", width)
-      .attr("height", height)
-      .attr("class", "mapSVG");
-
-    var path = d3.geoPath()
-      .projection(projection);
-
-    var g = svg.append("g");
-
-    //Spotify DATA READ IN
-    d3.csv("./Book500.csv").then(function (tempData) {
-      const addMoreData = () => {
-          if (tempData[0].region2 !== undefined) return
-          const data = []
-          let lastDate = null
-          let index = -1
-
-          tempData.forEach(song => {
-            const { region, trackName, date } = song
-            let region2, color
-
-            if (trackName === 'Shape of You') color = '#EC6967'
-            else if (trackName === 'Despacito - Remix') color ='#F4B1B2'
-            else if (trackName === 'Starboy') color = '#FFA764'
-            else if (trackName === 'Rockstar') color = '#FED19B'
-            else if (trackName === 'Mi Gente') color = '#78BD70'
-            else if (trackName === 'Felices los 4') color = '#C9E8AC'
-            else if (trackName === 'Look What You Made Me Do') color = '#69A2CB'
-            else if (trackName === 'Criminal') color = '#C0DCE8'
-            else if (trackName === 'Something Just Like This') color = '#987284'
-            else if (trackName === 'Me RehÃºso') color = '#D8C8E0'
-
-            if (region === 'ar') region2 = 'ARG'
-            else if (region === 'at') region2 = 'AUT'
-            else if (region === 'au') region2 = 'AUS'
-            else if (region === 'be') region2 = 'BEL'
-            else if (region === 'bo') region2 = 'BOL'
-            else if (region === 'br') region2 = 'BRA'
-            else if (region === 'ca') region2 = 'CAN'
-            else if (region === 'ch') region2 = 'CHE'
-            else if (region === 'cl') region2 = 'CHL'
-            else if (region === 'co') region2 = 'COL'
-            else if (region === 'cr') region2 = 'CRI'
-            else if (region === 'cz') region2 = 'CZE'
-            else if (region === 'cz') region2 = 'CZE'
-            else if (region === 'de') region2 = 'DEU'
-            else if (region === 'dk') region2 = 'DNK'
-            else if (region === 'do') region2 = 'DMA'
-            else if (region === 'ec') region2 = 'ECU'
-            else if (region === 'ee') region2 = 'ETH'
-            else if (region === 'es') region2 = 'ESP'
-            else if (region === 'fi') region2 = 'FIN'
-            else if (region === 'fr') region2 = 'FRA'
-            else if (region === 'gb') region2 = 'GBR'
-            else if (region === 'gr') region2 = 'GRC'
-            else if (region === 'gt') region2 = 'GTM'
-            else if (region === 'hk') region2 = 'HKG'
-            else if (region === 'hn') region2 = 'HND'
-            else if (region === 'hu') region2 = 'HUN'
-            else if (region === 'id') region2 = 'IDN'
-            else if (region === 'ie') region2 = 'IRL'
-            else if (region === 'is') region2 = 'ISL'
-            else if (region === 'it') region2 = 'ITA'
-            else if (region === 'jp') region2 = 'JPN'
-            else if (region === 'lt') region2 = 'LTU'
-            else if (region === 'lu') region2 = 'LUX'
-            else if (region === 'lv') region2 = 'LVA'
-            else if (region === 'mx') region2 = 'MEX'
-            else if (region === 'my') region2 = 'MYS'
-            else if (region === 'nl') region2 = 'NLD'
-            else if (region === 'no') region2 = 'NOR'
-            else if (region === 'nz') region2 = 'NZL'
-            else if (region === 'pa') region2 = 'PAN'
-            else if (region === 'pe') region2 = 'PER'
-            else if (region === 'ph') region2 = 'PHL'
-            else if (region === 'pl') region2 = 'POL'
-            else if (region === 'pt') region2 = 'PR1'
-            else if (region === 'py') region2 = 'PRY'
-            else if (region === 'se') region2 = 'SWE'
-            else if (region === 'sk') region2 = 'SVK'
-            else if (region === 'sv') region2 = 'SLV'
-            else if (region === 'tr') region2 = 'TUR'
-            else if (region === 'tw') region2 = 'TWN'
-            else if (region === 'us') region2 = 'USA'
-            else if (region === 'uy') region2 = 'URY'
-
-            const songObj = {
-              ...song,
-                region2,
-                color
-            }
-            if (date === lastDate) {
-              const arrOfDate = data[index]
-              arrOfDate.push(songObj)
-            } else {
-                data.push([songObj])
-              index++
-            }
-
-            lastDate = date
-          });
-
-          return data
-        }
-      const spotifyData = addMoreData();
-
-      // PROMISE FOR COUNTRIES AND FILL
-      d3.json("combined2.json").then(function (world) {
-        const changeCountryColor = (sliderValue) => {
-          svg.selectAll('path')
-          .on("mousemove", mouseOnPlot)
-          .on("mouseout", mouseLeavesPlot)
-          .attr('song', d => {
-            const countryID = d.id
-            const listSongsOnDate = spotifyData[sliderValue]
-            let trackName;
-
-            listSongsOnDate.forEach(song => {
-              if (song.region2 === countryID) {
-                trackName = song.trackName
-              }
-            })
-
-            return trackName
-          })
-          .style("fill", function (d) {
-            const countryID = d.id
-            let colorReturn = d3.rgb('#000');
-
-            const listSongsOnDate = spotifyData[sliderValue]
-
-            listSongsOnDate.forEach(song => {
-              if (song.region2 === countryID) {
-                colorReturn = song.color
-              }
-            })
-
-            return colorReturn
-          })
-          .attr("d", path);
-        }
-
-        svg.selectAll('path')
-          .data(topojson.feature(world, world.objects.countries).features)
-          .enter().append("path")
-          .attr("name", function (d) { return d.properties.name; })
-          .attr("id", function (d) { return d.id; })
-
-        d3.select('.slider').on('input', function () {
-          changeCountryColor(this.value)
-          d3.selectAll('.date')
-            .text(spotifyData[this.value][0]['date'])
-        })
-
-        svg.selectAll('path')
-
-        changeCountryColor(1)
-        d3.selectAll('.date')
-            .text(spotifyData[0][0]['date'])
-      });
-    });
-
-    var tooltip = d3.select("#mapContainer")
-                      .append("div")
-                      .attr("id", "tooltip")
-                      .attr("class", "tooltip")
-                      .style("opacity", 0);
-    var tooltipWidth = parseFloat(tooltip.style("width"));
-    var tooltipHeight = parseFloat(tooltip.style("height"));
-
-    function mouseOnPlot() {
-      // Move the tooltip
-      const x = (event.clientX) + 'px'
-      const y = (event.clientY) + 'px'
-      tooltip.style("left", x);
-      tooltip.style("top", y);
-
-      // Clear whatever is there
-      tooltip.html("");
-
-      // Give the tooltip a country label
-      let country = d3.select(this);
-      console.log(country);
-      const countryName = country.attr('name');
-      tooltip.append("div").text(countryName);
-
-      let song = d3.select(this);
-      console.log(song);
-      const countrySong = song.attr('song');
-      tooltip.append("div").text(countrySong);
-
-      let artist = d3.select(this);
-      console.log(artist);
-      const countryArtist = artist.attr('artist');
-      tooltip.append("div").text(countryArtist);
-
-      // Show the tooltip!
-      tooltip.style("opacity",1);
-    }
-    function mouseLeavesPlot() {
-      tooltip.style("opacity",0);
-    }
-
-  </script>
 </body>
 
 </html>
