--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 
 <head>
-  <link rel="stylesheet" type="text/css" href="./styles.css">
+  <link rel="stylesheet" type="text/css" href="./styles/styles.css">
+  <link rel="stylesheet" type="text/css" href="./styles/slider.css">
+  <link rel="stylesheet" type="text/css" href="./styles/legend.css">
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="http://d3js.org/topojson.v1.min.js"></script>
   <script src="https://d3js.org/d3-axis.v1.min.js"></script>
@@ -14,6 +16,7 @@
   <div id='Intro'>
     <h1>Spotify's Top Songs by Country</h1>
     <h2>January 1, 2017 — December 31, 2017</h2>
+    <hr>
   </div>
 
   <div id="mapContainer">
