--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
     <div id="mapText">
       <p class="date"></p>
     </div>
-    <!-- create div for color legend -->
     <div id="legend">
       <div class="title">
         <p class="topSongs"><span class="key-dot"></span><b>Top 10 Songs of 2017</b></p>
@@ -54,6 +53,7 @@
     <div> <p class="topSongs"><span class="key-dot ninth"></span>Something Just Like This</p> </div>
     <div> <p class="topSongs"><span class="key-dot tenth"></span>Me Rehúso</p> </div>
     </div>
+    <iframe id='spotify' src="https://open.spotify.com/embed/track/1GCcR23J4crjdOfdScSwoZ" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
     <div class='slider-container'>
       <input type="range" min="0" max="364" value="0" class="slider" step='1'>
       <ul class='slider-labels'>
